[gd_scene load_steps=7 format=2]

[ext_resource path="res://GUI/MainMenu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.231373, 0.223529, 0.262745, 0.960784 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id=2]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0

[sub_resource type="DynamicFontData" id=3]
font_path = "res://GUI/NotoSerif-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 32
use_mipmaps = true
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )
PanelContainer/styles/panel = SubResource( 1 )
ScrollContainer/styles/bg = SubResource( 2 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 5 )
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 765.0
margin_top = 320.0
margin_right = 1154.0
margin_bottom = 760.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 369.0
margin_bottom = 420.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 349.0
margin_bottom = 45.0
text = "Godot Drone Simulator"
align = 1
valign = 1

[node name="ButtonFly" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 349.0
margin_bottom = 116.0
text = "Fly"

[node name="ButtonQuad" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 349.0
margin_bottom = 187.0
text = "Quad Settings"

[node name="ButtonHelp" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 207.0
margin_right = 349.0
margin_bottom = 258.0
text = "Help"

[node name="ButtonOptions" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 278.0
margin_right = 349.0
margin_bottom = 329.0
text = "Options"

[node name="ButtonQuit" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 349.0
margin_right = 349.0
margin_bottom = 400.0
text = "Quit"
